brat/test/golden/error/type-arith.brat.golden
Error in test/golden/error/type-arith.brat on line 1:
f(n :: #, Vec(Nat, n ^ 3)) -> Bool
                   ^^^^^

  Type error: Type level arithmetic too confusing

